log
Thu 28 Mar 2024 05:59:41 PM UTC: 
 tests:  0|6
total_score: 0/70
2cf32ae
Thu 28 Mar 2024 06:07:26 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   33 |   list->head = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List* list = (List*) malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:34:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |   list->current = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List* list = (List*) malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:35:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |   list->tail = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List* list = (List*) malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3431f32
Fri 29 Mar 2024 01:42:37 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   33 |   list->head = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List* list = (List*) malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:34:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |   list->current = list->head;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List* list = (List*) malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:35:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |   list->tail = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List* list = (List*) malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c7c525a
Fri 29 Mar 2024 01:45:44 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
02a1647
Fri 29 Mar 2024 02:02:05 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9acb1c0
Fri 29 Mar 2024 02:03:45 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a8577a4
Fri 29 Mar 2024 02:06:40 AM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
b9dc4f0
Fri 29 Mar 2024 02:07:03 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1f32788
Fri 29 Mar 2024 02:09:19 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1f22c9a
Fri 29 Mar 2024 02:10:18 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
539dbad
Fri 29 Mar 2024 02:11:10 AM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
4403abc
Fri 29 Mar 2024 02:11:25 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5f1339f
Fri 29 Mar 2024 02:13:09 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
8a4ab56
Fri 29 Mar 2024 02:13:32 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f6d1a30
Fri 29 Mar 2024 02:14:51 AM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
996ed3e
